prevent horizontal scroll and added margin right to nav button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,8 @@ html,
 body {
     width: 100%;
     height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -131,6 +133,7 @@ hr.small {
     position: fixed;
     top: 0;
     right: 0;
+    margin-right: 2%;
 }
 
 #sidebar-wrapper.active {
